Lauching TechSavvy Project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
 .App {
-  text-align: center;
+  background-color: #f0f0f0;
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo-div {
+  font-family: "Raleway", sans-serif;
+  font-size: 30px;
+  letter-spacing: 5px;
+  font-weight: 200;
+  padding-top: 2%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-page {
+  background: rgb(250, 223, 251);
+  background: linear-gradient(
+    150deg,
+    rgba(250, 223, 251, 0.9940768543745623) 76%,
+    rgba(94, 99, 231, 1) 99%
+  );
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+.logo-div,
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+.form-container {
+  width: 50%;
+  margin: auto;
+  height: 80%;
+  padding-bottom: 50px;
+}
+.error {
+  color: red;
+}
+.input-container {
+  padding: 30px 100px 0 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.input-field {
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+#login-button {
+  background: rgb(126, 64, 240);
+  height: 50px;
+  border-radius: 10px;
+  border: none;
   color: white;
+  text-transform: uppercase;
+}
+.heading {
+  padding-top: 50px;
+  text-align: center;
+}
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  margin: 10px;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+.top-bar li {
+  list-style: none;
+}
+.layout{
+  display: flex;
+  flex-direction: row;
+  justify-content: safe;
+  height: 100%;
+}
+.main-content{
+  margin-left: 70px; /* Account for sidebar width */
+  width: calc(100% - 70px); /* Ensure it takes the remaining space */
+  overflow: auto; /* Prevent content overflow from causing scroll bars */
+}
+@media (max-width: 768px) {
+  .main-content {
+    margin-left: 0;
+    width: 100%; /* Full width on smaller screens */
+  }}
+.sidebar {
+  width: 70px;
+  height: 100%;
+  transition: width 0.5s;
+  background-color: white;
+  padding: 10px;
+  color: #000;
+  list-style: none;
+  border-top-left-radius: 10px;
+  z-index: 10;
+  position: fixed;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+
+.performance-head {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.metrics-btn {
+  background-color: #fff; /* Keep the background color the same on hover */
+  height: 40px;
+  border: 1px solid #ccc; /* Add a 1px border */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.metrics-btn:hover {
+  background-color: #fff; /* Keep the background color the same on hover */
+  border-color: #ccc; /* Keep the border color the same on hover */
+  box-shadow: none; /* Remove any box shadow on hover */
+}
+
+
+
+.expanded {
+  width: 250px;
+  transition: width 0.5s ease-in-out;
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+  font-size: 60px;
+  font-weight: 200;
+  cursor: pointer;
+  padding: auto;
+  margin: auto;
+}
+
+.menu-item {
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+}
+
+.expanded .menu-item {
+  opacity: 1;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  letter-spacing: 5px;
+  cursor: pointer;
+}
+.heatmap-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 14px;
+  display: table;
+}
+
+.table-hd {
+  color: grey;
+  font-size: small;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: none;
+  font-weight: 100;
+  margin-left: 50px;
+}
+
+.td-cell {
+  display: inline-block;
+  width: 31%;
+  height: 100%;
+  vertical-align: top;
+  text-align: center;
 }
